Update Daily Content

--- a/content/Daily-Notes/2024-12-19.md
+++ b/content/Daily-Notes/2024-12-19.md
@@ -66,6 +66,17 @@ Simulated physics engine on your local computer, lightweight, completely written
 Helped [[Elo]] with his present for his lady. It's a custom Tarot card. He really did a LOT of work on it. It was super cool watching him use AI to get the results he was looking for. I got to experience the future right in front of my eyes. I feel honred, that was super fucking cool to get to give him that experience.
 
 
+`Thu, 12/19/2024, 21:35`
+A lesson learned
+I wasted about 3 hours today at Banshee working with CSS and fucking with some animations on a website and everything. I got really frustrated that the AI wasn't able to listen to me and follow my directions. it would get SO CLOSE then just fuck everything all the way up. it would make stuff really good and then it would just go in there and fuck up everything good it just did. It was infuriating.
+Then I decided to just...give up. Just give up! What a concept!
+>"NO"
+My mind said.
+>"YOU CANNOT GIVE UP."
+Um, yes. Yes the fuck I can.
+I'm not gaining anything here. I'm just spinning my wheels. So I decided that I'm gonna give up on this and just let it be what it already is, and then wait till Orion AGI comes out tomorrow and I can just pivot from web dev bullshit to hardware like everyone else.
+8 days as Kayla said.
+She's got the tism, I can tell. All the Banshee crew does. That's what makes them feel so much like home.
 
 
 
