--- a/content/Daily-Notes/2024-12-19.md
+++ b/content/Daily-Notes/2024-12-19.md
@@ -78,6 +78,33 @@ I'm not gaining anything here. I'm just spinning my wheels. So I decided that I'
 8 days as Kayla said.
 She's got the tism, I can tell. All the Banshee crew does. That's what makes them feel so much like home.
 
+`Thu, 12/19/2024, 23:19`
+I can't be the first person out there to come up with this idea.
+Throw it all in a blender, and see what sticks. Grab a physics engine, grab every supercomputer you can find, and just start doing stuff. Have an AI look over it all, choose the most desirable path, and then give it a bank account and tell it to do whatever it takes to win capitalism.
+That's absolutely happening right now. And I want no part of it.
+What I DO want to do is use things like 
+[Genesis](https://genesis-embodied-ai.github.io/) to simulate many different permutations of [[Johnny Autoseed]] to maximize crop yield over iterations in sped-up accelerated time-shifted virtual space. 
+Wes Roth made a [video](https://youtu.be/IAmrSaDW88I?si=UeY-oMlG3aktuQGr)
+An RTX 4090 is all you need to train robots. My home computer can run a simulation and train a robot to walk.
+I said this is the year we get robots and I was fucking right.
+Now it's all about getting smarter models to finish the rest of the details for me. I know enough. I'll never be able to read more than an AI. But I do have better ideas, and I think humans will always be able to adapt and have new ideas. Our special talent and skill is coming up with new ways to do things. Mostly by trial and error. Lots of iterations.
+Now we can do that in virtual reality.
+More importantly, AI can do it. As many times as you have computer power for.
+It really is that straightforward.
+It's not more or less complicated than that.
+Elon has a bagillion supercomputers. NVIDIA has been doing their best to make as much progress on their small computer line and other products and services as possible. But, as always, in this industry you never know when and where the next fucking big ass player shows up to gut-punch your startup right in the balls.
+So don't be the kind of sucker who gets gut-punched int he balls, fucking gut punch life first.
+There's a really simple formula - take care of your body, don't drink, do hydrate and shower and floss, get a DNA gene test done and see what you're at risk for, work a chill ass job, live well within your means no matter what that takes (even live in your car if you need to), do something every day that is high leverage (coding, networking, making videos, hybrid overlap activities like making videos about coding and networking in the comments...), do it over and over every day for a really long time, never quit, just take breaks and do other things you're interested in, but always come back to the ONE THING, get really fucking good at it, and then stay the course, be consistent, never stop.
+You don't have to be the best to succeed or to earn success. You just have to be as good as your next most expensive competition and then charge less.
+You can absolutely 100% achieve being the best if you simply put in more time than anybody else and deliver AS GOOD as your next closest competition. 
+Look for the answers to all the implied questions, but to make a point, here are some of them out loud in a list:
+- Who is my closest competition?
+- How do I even tell who my competition is?
+- Do I want to compete in this industry? 
+- What would I do if I wasn't pursuing my goals but still needed money?
+- What low-impact jobs am I qualified for...
+That's your list and your goals to get started.
+
 
 
 ---
