Update Daily Site Content

--- a/content/Daily-Notes/2024-12-20.md
+++ b/content/Daily-Notes/2024-12-20.md
@@ -78,7 +78,33 @@ Achieves better performance with scaling of thinking and time at inference and c
 # Release - End of January, Early February
 ---
 
+`Fri, 12/20/2024, 18:18`
 
+Wow. We just hit something significant. A true step change today.
+
+`Fri, 12/20/2024, 18:18`
+Tonight I am at Stoble getting things ready, listing the Cognex and the Allen-Bradley parts on Ebay
+
+`Fri, 12/20/2024, 19:19`
+
+I'm gonna run a little experiment on escapecapitalism.org where I have an AI model perform capitalism in a little game of evolutionary iterative development. I want to make an AI do capitalism in a simulated environment.
+
+See [[Projects/AI-Capitalism-Sim/EscapeCapitalism-Technical-Specs|EscapeCapitalism Technical Specs]] for implementation details.
+
+`Fri, 12/20/2024, 21:18`
+I found the fastest and easiest source of money and I'm going to earn, if it's what it appears to be, about $2500-$3000 from selling these microcontrollers, and then about another $2500-$3000 from selling these cables, and then yet ANOTHER $2500-$3000 selling other unrelated items, which means I should have about $6000 of play money coming to me for the season if I can get all this shit sold.
+Bonkers dude. Bananas.
+
+`Fri, 12/20/2024, 21:21`
+Escape Capitalism - I can pretty much expect to be able to one-shot these kind of games and apps with [[o3]] huh...
+
+I want to see if Claude can develop a game in the browser with abstract english instructions. Let's find out...
+
+`Fri, 12/20/2024, 21:49`
+I love the iterative development process these LLMs use. Can't wait to apply it to science and robots. This is gonna be fucking COOL
+
+`Fri, 12/20/2024, 23:49`
+Ok I got it working. I have two AI models talking to one another in a chat window, doing some simulated capitalism. This is sick as fuck. Damn. As I learn to do more of this...
 
 
 
@@ -97,7 +123,7 @@ Kleavor (#900)
 - **Stats:** hp: 70, attack: 135, defense: 95, special-attack: 45, special-defense: 70, speed: 85
 
 > "Gotta catch 'em all!" — *Pokémon Trainer*
-    
+
 
 ---
 
