Update Daily Content

--- a/content/Daily-Notes/2024-12-23.md
+++ b/content/Daily-Notes/2024-12-23.md
@@ -96,9 +96,15 @@ Fucking retarded. All of it. Money, as a concept, is FUCKING STUPID and we're li
 `Mon, 12/23/2024, 12:10`
 And I know I used the 'no no' word Retard. I'm retarded. I am a retard. I'm autistic. I get to use it.
 
+`Mon, 12/23/2024, 13:02`
+Ok BLAM
+![[Screen Shot 2024-12-23 at 1.02.28 PM.png]]
 
+Fuck you God. Fuck you Capitalism.
 
+Made enough to get the fucking train ticket.
 
+I'm on my way to Seattle baby! :)
 
 
 ---
