Update Daily Content

--- a/content/Daily-Notes/2024-12-23.md
+++ b/content/Daily-Notes/2024-12-23.md
@@ -106,6 +106,32 @@ Made enough to get the fucking train ticket.
 
 I'm on my way to Seattle baby! :)
 
+`Mon, 12/23/2024, 13:58`
+I really, really, really miss my friends. I loved my life so much.
+
+This is what it's like to have trauma lol
+
+I just want to call them and celebrate with them and laugh and play music and feel good like we did again.
+
+It's over. That time really is gone. I kept things together, as much as anyone, and that whole group, those experiences, that feeling, that love...
+
+It's gone.
+
+Yes, you can recreate and you can find new things.
+
+I just wish the continuity of my life's story didn't have to end every time someone else got their feelings hurt. it doesn't even matter if you meant it or not. They don't care. They will retaliate sometimes and hurt you back on purpose to feel better about themselves. It's about regaining a lost sense of power.
+But it hurts still no matter why the harm is being inflicted. I've never intentionally tried to hurt anyone. I've hurt lots of people by letting them down, but that's not really about me, is it? 
+
+I was so sensitive that I let other people's pain or pleasure completely dictate the course of my life. Now, on the other side of that toxicity, I no longer need to even consider it. I can just do stuff. I can manifest food by speaking. That's power.
+
+They could too. The solutions were always right there. I tried to help them see it, but they bit me when they thought I was trying to take their food.
+
+They didn't know I was trying to make sure we all ate well forever, and that we would continue to feel safe and loved.
+
+I was trying to enshrine and protect what we had because it was so good. But co-creation requires co-participation. You can't just flow with it and then get mad later when it didn't work out your way.
+
+Lots of people complained about problems ***they caused*** or that they had control over solving. I tried to get them to see that. And for it, I was punnished and hated. Yeah, maybe I didn't go about it the "right" way. But I did try. And that's more than most can say.
+
 
 ---
 
