Update Daily Content

--- a/content/Daily-Notes/2024-12-23.md
+++ b/content/Daily-Notes/2024-12-23.md
@@ -132,6 +132,26 @@ I was trying to enshrine and protect what we had because it was so good. But co-
 
 Lots of people complained about problems ***they caused*** or that they had control over solving. I tried to get them to see that. And for it, I was punnished and hated. Yeah, maybe I didn't go about it the "right" way. But I did try. And that's more than most can say.
 
+`Mon, 12/23/2024, 14:47`
+You can just do stuff.
+
+First booked meeting, guy didn't even show up. I'll probably never hear from him again. Might get an email. I gave him my phone number he can call me if he wants, or email me, otherwise I did my due diligence.
+
+Time to smoke and go walk around and process what I just experienced.
+
+I never processed anything when I was a kid. I only pushed myself to live up to the expectations of my parents and the adults in my life. Who were (mostly) well-meaning but toxic in ways the couldn't understand at the time. There's only a few people I would say were actually malicious. The rest was mostly codependency based in a scarcity mindset. So of course I was perceived as the guy who was fun and funny and entertaining cuz that's who they made me. They never allowed me to make any decisions or have any agency or power in my life.
+
+That's my power. The power to choose. The power of agency. That's it, or at least a huge part of it.
+
+Well, time to make another video and then go chill out for the rest of the evening. Who knows what I'll do. I'm now just doing reps to get meetings set up so I can get a train ticket up to Seattle in 3 days. That's the whole plan.
+
+I wanna take a shower. I wonder if any of my friends would let me shower at their place today...
+
+Or if I can earn enough to get my Planet Fitness turned back on (probably like $300 + $500 for a train ticket that's way more than I have right now but $800 is easy to come across if you know where to look for it)
+
+Might just fuck around and ask the ElevenLabs guy for a one-time donation to get me set up with some stuff I need to survive. The TikTok payment coming on Jan 15th will be nice, but I need money NOW for Christmas. Maybe it'll be a Christmas miracle. Who knows, but I'm happy to do it. It's time to get serious. I'm ready. Let's go :)
+
+
 
 ---
 
