Update Daily Content

--- a/content/Daily-Notes/2024-12-24.md
+++ b/content/Daily-Notes/2024-12-24.md
@@ -59,6 +59,58 @@ Your heart doesn't lie. My heart feels peace. I can just do what I do and earn m
 
 This is everything.
 
+`Tue, 12/24/2024, 15:52`
+Justen Willis Meeting
+He's seen me and has a parasocial relationship with me.
+
+> "Most people who come to me with questions."
+
+- Engineer
+- "I have a while before that's a problem."
+- Engineer with AudHD - my bread and butter :) that and old ladies they both love me
+- Can I get him in the Multiverse? AI Coffee? $60 a month. 
+- "We were all in the gifted program, we all had the same psychological profile, the same mental issues, and now we have taught each other how to handle things."
+- "I am aware of everybody's shit, and I have been in observe mode, and I'm working on how to propose my idea to the masses."
+- Had 1400 people apply for a job that didn't exist. He did an intake form.
+- He's just like me wow
+- Wants to build something called "Unity Consciousness"
+- Wants to iterate over problems with a cellular replication model to solve societal problems.
+- He's [[@mindfullyabundant]]
+- AWS is about to have steep competition with HollowChain
+- What is Hollow Chain? I need to look that up and go deep on that one. Seems like a great way to solve the cloud problem. Decentralized everything.
+- "I think data is the new oil."
+- "It's not gonna be individuals working toward monetary means, it's gonna be us collectively working on solutions to problems."
+- He wants to create a digital clone of yourself, so that you can share what you learn with the collective. 
+- He wants to privatize the personal data, but empower the individual to create KPIs for problems 
+- AI can teach you in the best way, because it learns how you learn and as your awareness grows and takes hold.
+- First item to tackle is homelessness
+
+>"If I could figure out a way to build a collective war chest that could crack a small fraction of the tourism industry - that would be enough to offset the problem."
+
+>"I want to solve the problems that we face as human beings and solve them with decentralization and AI."
+
+We will schedule a follow-up
+I'll make sure he can get back to me. This is a really good connection.
+
+The perp walk of Luigi was the kicker - made everybody feel like Luigi was SUPER not the guy. IDK.
+
+### "How do I put systems in place to be able to get my ideas out of my head"
+
+Is having trouble typing prompts that can get the info he needs.
+Has the nonprofit license and everything.
+Needs the words, needs clarity, has a hard time pulling the words out of his head.
+
+>"I don't like the main players, I don't want to use them, but I have no choice."
+
+- KPI - 1% of the world's population to work together. A 1% conscious focus to the problems one problem at a time would create a fundamental cascading domino effect that will create an accelerating exponential.
+- Highly morally driven. Wants to help move the world away from what he sees as unethical and immoral exploitation of the natural world and the people in it.
+- "I want to show people that we can change things."
+- Wants to build an AI system called ARCANA - Autonomous Reasoning bot
+- Highly morally motivated
+- The distance between idea and reality is getting MUCH shorter.
+
+Here's the pitch: I think this guy belongs in the Multiverse Prompt engineering class.
+
 
 ---
 
