--- a/content/Daily-Notes/2024-12-24.md
+++ b/content/Daily-Notes/2024-12-24.md
@@ -34,6 +34,9 @@ newsletter: '[[Newsletters/NovaBrew-2024-12-24]]'
 [[Newsletters/NovaBrew-2024-12-24|Today's Newsletter]]
 [[AI Chats/Chat0001-12242024|Today's AI Chat]]
 
+
+![A vibrant futuristic digital artwork depicting a productive and reflective day. The scene features a glowing icon of a wallet to symbolize passive income, a futuristic document icon to represent policy updates, and interconnected glowing nodes showing innovation and collaboration. The background showcases glowing waves emanating from a computer screen to symbolize technological breakthroughs. The artwork is bright and colorful, using a neon palette with blues, purples, and golden highlights, blending themes of productivity, creativity, and accomplishment. The composition is sleek, energizing, and futuristic with a professional yet uplifting feel.](https://files.oaiusercontent.com/file-CvWYGsMJkSqHCHuZa9mLdq?se=2024-12-25T03%3A26%3A46Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3D9dcb0422-b4d1-4f66-bd05-9724bc1d3259.webp&sig=XDCbCz%2Bbv89cumUC3B5E9C1ju0E65/712jHpSiLY7rg%3D)
+
 ---
 
 ## 📝 Daily Reflections
@@ -112,7 +115,26 @@ Needs the words, needs clarity, has a hard time pulling the words out of his hea
 Here's the pitch: I think this guy belongs in the Multiverse Prompt engineering class.
 
 `Tue, 12/24/2024, 19:03`
-Got a lot of time on my hands until I'm gonna be up in Seattle. I have to wait until Dec 26th to get my Chase account back up to 0, and then I'll need to close it out Friday (if the bank is open) and open up a new one so that I don't keep getting fucked on all these subscriptions that I keep forgetting ot cancel.
+Got a lot of time on my hands until I'm gonna be up in Seattle. I have to wait until Dec 26th to get my Chase account back up to 0, and then I'll need to close it out Friday (if the bank is open) and open up a new one so that I don't keep getting fucked on all these subscriptions that I keep forgetting to cancel.
+
+Ok my GOD do I love the feeling of logging into Stripe and seeing that I made money while I was just hanging out with Elo.
+
+Literally the dream come true - to make money while I'm at fucking band practice.
+
+It finally, FINALLY came fucking true. Holy shit dude. WOW.
+
+I'm up to $470 total now look:
+
+![[Screen Shot 2024-12-24 at 7.05.51 PM.png]]
+
+What a fucking journey to get here man. I had to learn SO much.
+
+`Tue, 12/24/2024, 19:10`
+And how did I not know about voice control for the computer this is genuinely incredible and will probably change my life a lot
+
+I can enter commands like "Open Chrome" and it will just do it I can also leave the cursor open on the obsidian window and I can just talk to my computer and dictate my notes into my notepad this is something I've literally been trying to do since I was in my early 20s in college this is I've been a fantasy of mine since forever to be able to write a book with my voice in a way that is reliable transparent consistent away that captures pretty much everything I need to capture but in a way that doesn't like break my ability to get my own you know thoughts out this is incredibly cool
+
+
 
 
 
