Update daily Content

--- a/content/Daily-Notes/2024-12-24.md
+++ b/content/Daily-Notes/2024-12-24.md
@@ -134,7 +134,26 @@ And how did I not know about voice control for the computer this is genuinely in
 
 I can enter commands like "Open Chrome" and it will just do it I can also leave the cursor open on the obsidian window and I can just talk to my computer and dictate my notes into my notepad this is something I've literally been trying to do since I was in my early 20s in college this is I've been a fantasy of mine since forever to be able to write a book with my voice in a way that is reliable transparent consistent away that captures pretty much everything I need to capture but in a way that doesn't like break my ability to get my own you know thoughts out this is incredibly cool
 
+`Tue, 12/24/2024, 19:34`
+I got AutoGen with Docker running locally on my machine using Ollama with Llama3.2 as the brain.
+Holy f*ck dude. 
+F*ck.
+It was so easy.
+I literally just asked Claude and copy pasted the docs for both Ollama and AutoGen, and sent the Cursor Agent off on its merry way.
 
+Holy f*ck dude. 
+
+What the f*ck?
+
+
+`Tue, 12/24/2024, 19:45`
+I'm recording my development process using Cursor with Claude to develop an automatically self-generating AI SDK with AutoGen and Streamlit and Ollama
+
+![[Screen Shot 2024-12-24 at 8.04.25 PM.png]]
+
+I still can't believe how easy this shit is.
+
+Wow.
 
 
 
