Update Daily Content

--- a/content/Daily-Notes/2024-12-25.md
+++ b/content/Daily-Notes/2024-12-25.md
@@ -3,13 +3,13 @@ title: December 25, 2024 • Daily Note
 date: 2024-12-25
 tags:
   - daily-notes
-ai-news: '[[AI News/AI-News-2024-12-25]]'
+ai-news: "[[AI News/AI-News-2024-12-25]]"
 ai_convos:
-  - '[[AI Chats/Chat0001-12252024]]'
+  - "[[AI Chats/Chat0001-12252024]]"
 work_efforts:
-  - '[[Work-Efforts/WE0001-12252024]]'
-related_notes:
-newsletter: '[[Newsletters/NovaBrew-2024-12-25]]'
+  - "[[Work-Efforts/WE0001-12252024]]"
+related_notes: "[[Prompt_Library]]"
+newsletter: "[[Newsletters/NovaBrew-2024-12-25]]"
 ---
 # Wednesday, December 25, 2024
 > Week 52 of 2024 • Q4
@@ -94,6 +94,102 @@ What a beauty. The Docker image compiled. Now we wait to see if Ollama will retu
 [[NovaSystem CoreBot Dev Log]]
 
 
+`Wed, 12/25/2024, 16:18`
+So I've got the benchmarking working for NovaSystem. I've solved the problems I was working on for the past 2 years. I fucking did it.
+
+This is the conclusion of the full day's work:
+
+### Results
+
+Let me explain what's happening under the hood with Ollama and the models:
+
+1. **Cold Start vs Hot Start**
+   - When you first call a model in Ollama, it needs to:
+     1. Load the model into memory
+     2. Initialize the runtime
+     3. Set up the inference engine
+   - This is a "cold start"
+   - Once a model is loaded, it stays in memory ("hot")
+   - Subsequent calls are much faster because the model is already loaded
+
+2. **What's Happening in Sequential Mode:**
+   ```
+   1. wizardlm2 loads (cold) -> runs -> stays loaded
+   2. nemotron-mini loads (cold) -> runs -> stays loaded
+   3. llama3.2 loads (cold) -> runs -> stays loaded
+   ```
+   - Each model loads one at a time
+   - System resources are dedicated to one model
+   - Models stay loaded for subsequent calls
+
+3. **What's Happening in Parallel Mode:**
+   ```
+   1. All three models try to load simultaneously:
+      - wizardlm2 loading...
+      - nemotron-mini loading...
+      - llama3.2 loading...
+   ```
+   - They compete for:
+     - Memory bandwidth
+     - CPU resources
+     - System I/O
+   - This causes massive slowdown
+
+It's like the difference between:
+- Sequential: Three people using one door one at a time
+- Parallel: Three people trying to squeeze through the door at once
+
+The "faster" sequential performance isn't actually faster - it's just more efficient because it avoids resource contention. For real-world usage, you'd typically have the models already loaded and "hot", making parallel execution more beneficial.
+
+Would you like me to modify the benchmark to:
+1. Add a warmup phase before testing?
+2. Show model load state (hot/cold)?
+3. Measure true inference time separately from load time?
+
+`Wed, 12/25/2024, 16:34`
+And then I did a little more :)
+
+![[screencapture-0-0-0-0-8000-api-benchmarks-2024-12-25-17_21_06.png]]
+
+`Wed, 12/25/2024, 17:21`
+God, I love having skills.
+
+Look at this prompt. This is why I believe most of the complaints about AI are genuinely a skill issue:
+```
+right now whenever a new chunk is added, the view automatically scrolls down  
+I'd love to be able to scroll freely, but to be able to click a button to return to the borron and have the diaplay behave the way it is now, but automatically staying scrolled on the bottom.  
+  
+Basically I'd like to be able to scroll in the live model output box, then once I do, have the current scrolling bahavior turn off, and a button appear on top of the bottom of the box that is just an arros that points down, which would return me to the bottom of the model output window, and would lock back in with the behavior we have now  
+  
+the button would then disappear on click and the current behavior would continue  
+  
+If I scrolled again in the box, it would repeat the button appearance and scroll lock stopping baheavior, you undersand what I mean?  
+  
+repeat your understanding back to me of what I'm asking you to do
+```
+
+That's how you ask specifically and clarify the understanding before proceeding.
+
+>I DID IT
+
+`Wed, 12/25/2024, 17:51`
+Here it is in all it's glory
+
+https://github.com/ctavolazzi/bytebrain
+
+![[screencapture-0-0-0-0-8000-api-benchmarks-2024-12-25-17_51_13.png]]
+
+Useful as fuck.
+
+---
+`Wed, 12/25/2024, 18:44`
+I am goated
+
+`Wed, 12/25/2024, 18:59`
+I am in the pit of despair
+
+`Wed, 12/25/2024, 19:03`
+Ok sometimes all you have to do is walk away for a second.
 
 
 ---
