Upload Daily Content

--- a/content/Daily-Notes/2024-12-26.md
+++ b/content/Daily-Notes/2024-12-26.md
@@ -59,6 +59,52 @@ Mark Russell meeting
 - Public insurance pricing
 - Public hospital pricing
 
+`Thu, 12/26/2024, 17:32`
+Got to add some buttons to the Johnny Autoseed site
+
+`Thu, 12/26/2024, 18:07`
+Hey, I think it's cute. And it's CLEARLY converting!
+
+![[Screen Shot 2024-12-26 at 6.07.30 PM.png]]
+
+
+`Thu, 12/26/2024, 18:33`
+Ok today I worked on tuning up the Johnny Autoseed landing page with common questions and concerns and complaints.
+
+Here's the full thing:
+![[screencapture-8000-2024-12-26-18_33_55.png]]
+
+It's SUCH a fucking good site. SUCH a GREAT funnel holy shit.
+
+Eddie and the other scammers over at Super Entrepreneur or whatever the fuck are charging over $10k for this
+And I see why. It's genuinely fucking worth it.
+
+I've already made $500. in the first week. That would take me 20 weeks to make 10k. Relatively passively now...just by meeting with people on my OWN fucking time.
+
+This is... this is great.
+
+I have all my booking calendars set to disallow bookings 12 hours in advance so that means people can't book for the same day but CAN book for the next day. So when I wake up, whatever my day looks like at that moment, that is ALL it's gonna look like.
+
+## ✨ Energy Management ✨
+
+---
+
+`Thu, 12/26/2024, 18:37`
+For reference, this is what TheCoffeeJesus.com looks like right now.
+I need to tweak the design for the desktop version, but DAMN it CONVERTS.
+
+`Thu, 12/26/2024, 19:46`
+Final version (for now)
+
+![[screencapture-127-0-0-1-8080-2024-12-26-19_46_42.png]]
+
+`Thu, 12/26/2024, 19:49`
+Dayum
+It's the day before the day I move.
+I'm going to Seattle the day after tomorrow. The town I've MOST wanted to live in, and I'm going there FOR FREE
+
+I couldn't be happier today :)
+
 
 ---
 
