Update Today's Content

--- a/content/Daily-Notes/2025-01-01.md
+++ b/content/Daily-Notes/2025-01-01.md
@@ -50,7 +50,7 @@ What the fucking shit
 ![[Screen Shot 2025-01-01 at 9.02.48 PM.png]]
 
 `Wed, 01/01/2025, 21:03`
-I have $44,000 now??? Holy shit. What the fucking fuck??
+I don't understand what's going on.
 
 ---
 
